Small markdown change

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 0. Imports, Path Discovery & Sanity Checks\n",
+    "## Step 0. Imports, Path Discovery & Sanity Checks\n",
     "\n",
     "Load all dependencies, discover the dataset CSV automatically, and validate critical directories.\n"
    ],
@@ -25,8 +25,8 @@
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-21T09:13:56.640136Z",
-     "start_time": "2025-07-21T09:13:08.592526Z"
+     "end_time": "2025-07-21T09:28:48.238590Z",
+     "start_time": "2025-07-21T09:28:48.236433Z"
     }
    },
    "source": [
@@ -36,6 +36,15 @@
     "from typing import List, Dict, Any\n",
     "from ollama import chat\n",
     "from docling.document_converter import DocumentConverter, ConversionError\n",
+    "\n",
+    "from pypdfium2._helpers.misc import PdfiumError\n",
+    "import warnings\n",
+    "from google.protobuf.json_format import ParseDict, ParseError\n",
+    "from phenopackets import Phenopacket as ProtoPhenopacket\n",
+    "import hashlib\n",
+    "\n",
+    "import json\n",
+    "from json.decoder import JSONDecodeError\n",
     "\n",
     "# Need this at least once for some reason:\n",
     "# import .autonotebook\n",
@@ -150,183 +159,14 @@
     "\n",
     "print(\"hello0\")  # print hello 0 as a sanity check"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Project Start:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5\n",
-      "Source Folder:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src\n",
-      "Utilities Folder:    /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/notebooks/utils\n",
-      "PYTHONPATH patched with: /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/notebooks/utils\n",
-      "Stage 1 Complete, Produced /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/notebooks\n",
-      "1234 PMIDs found within /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/notebooks\n",
-      "Stage 2 Complete\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing PMID_37541189:   0%|                         | 0/10 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A PDF for PMID_37541189 was successfully downloaded. PMCID=10432175.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing PMID_7795241:  10%|█▊                | 1/10 [00:08<01:16,  8.45s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No PMCID found for PMID_7795241.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing PMID_4045952:  20%|███▌              | 2/10 [00:08<00:30,  3.80s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A PDF for PMID_4045952 was successfully downloaded. PMCID=1049446.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing PMID_33875846:  30%|█████            | 3/10 [00:15<00:36,  5.19s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A PDF for PMID_33875846 was successfully downloaded. PMCID=8354858.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing PMID_30249237:  40%|██████▊          | 4/10 [00:22<00:35,  5.94s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A PDF for PMID_30249237 was successfully downloaded. PMCID=6154888.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing PMID_28540407:  50%|████████▌        | 5/10 [00:29<00:30,  6.06s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No PMCID found for PMID_28540407.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing PMID_32376980:  60%|██████████▏      | 6/10 [00:29<00:16,  4.15s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A PDF for PMID_32376980 was successfully downloaded. PMCID=8093014.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing PMID_25163805:  70%|███████████▉     | 7/10 [00:35<00:14,  4.86s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A PDF for PMID_25163805 was successfully downloaded. PMCID=4236574.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing PMID_23211637:  80%|█████████████▌   | 8/10 [00:42<00:10,  5.26s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No PMCID found for PMID_23211637.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing PMID_12165566:  90%|███████████████▎ | 9/10 [00:42<00:03,  3.83s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No PMCID found for PMID_12165566.\n",
-      "Stage 3 Complete\n",
-      "PDF inputs folder:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/pmid_pdfs\n",
-      "Ground truth folder:     /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/notebooks\n",
-      "Dataset CSV path:        /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/PMID_PDF_Phenopacket_list_in_phenopacket_store.csv\n",
-      "LLM outputs folder:      /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/llm_output_dir\n",
-      "Validated JSONs folder:  /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/validated_jsons\n",
-      "Evaluation report path:  /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/reports/first_report.json\n",
-      "hello0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing of 10 PMIDs complete. 12 PDFs successfully downloaded.: 100%|█| 10/1\n"
-     ]
-    }
-   ],
-   "execution_count": 83
+   "outputs": [],
+   "execution_count": 91
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 1. Load Dataset\n",
+    "## Step 1. Load Dataset\n",
     "\n",
     "Read the CSV of PMIDs, input paths, and truth paths\n"
    ],
@@ -412,7 +252,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 2 Discover Phenopacket-Store Files\n",
+    "## Step 2 Discover Phenopacket-Store Files\n",
     "\n",
     "Locate all ground-truth Phenopacket JSON files under the `phenopacket_store/notebooks/` directory."
    ],
@@ -421,17 +261,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-21T09:18:00.368022Z",
-     "start_time": "2025-07-21T09:18:00.316897Z"
+     "end_time": "2025-07-21T09:30:42.061781Z",
+     "start_time": "2025-07-21T09:30:42.038963Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Prepare phenopacket JSON cache, skip logic, and cap how many PDFs to process\n",
-    "import hashlib\n",
     "\n",
     "# Set number of cases to process in this run\n",
-    "MAX_LOAD = 100\n",
+    "MAX_LOAD = 10\n",
     "\n",
     "# Persist cache of already-parsed phenopacket cases\n",
     "phenopacket_cache_path = os.path.join(experimental_data_root, \"phenopacket_cache.json\")\n",
@@ -469,19 +308,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded phenopacket cache with 5 entries\n",
-      "Discovered 7969 ground-truth JSON files\n",
-      "hello2\n"
+      "Initialized empty phenopacket cache\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "No ground-truth phenopacket JSON files found with pattern: /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/notebooks/*/phenopackets/*.json",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mFileNotFoundError\u001B[39m                         Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[92]\u001B[39m\u001B[32m, line 30\u001B[39m\n\u001B[32m     28\u001B[39m truth_json_filepaths = glob.glob(search_pattern, recursive=\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[32m     29\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m truth_json_filepaths:\n\u001B[32m---> \u001B[39m\u001B[32m30\u001B[39m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mFileNotFoundError\u001B[39;00m(\u001B[33m\"\u001B[39m\u001B[33mNo ground-truth phenopacket JSON files found with pattern: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[33m\"\u001B[39m % search_pattern)\n\u001B[32m     32\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33mDiscovered \u001B[39m\u001B[38;5;132;01m%d\u001B[39;00m\u001B[33m ground-truth JSON files\u001B[39m\u001B[33m\"\u001B[39m %\u001B[38;5;28mlen\u001B[39m(truth_json_filepaths))\n\u001B[32m     34\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33mhello2\u001B[39m\u001B[33m\"\u001B[39m)  \u001B[38;5;66;03m# print hello 2 as a sanity check\u001B[39;00m\n",
+      "\u001B[31mFileNotFoundError\u001B[39m: No ground-truth phenopacket JSON files found with pattern: /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/notebooks/*/phenopackets/*.json"
      ]
     }
    ],
-   "execution_count": 87
+   "execution_count": 92
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 3. Prepare PDF-to-Text Converter and Helper Function\n",
+    "## Step 3. Prepare PDF-to-Text Converter and Helper Function\n",
     "\n",
     "Instantiate DocumentConverter and define a helper function to load or convert the clinical PDFs for LLM input.\n"
    ],
@@ -563,7 +411,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 4. Load Clinical PDFs and Ground-Truth Phenopackets\n",
+    "## Step 4. Load Clinical PDFs and Ground-Truth Phenopackets\n",
     "\n",
     "Iterate over each case, load the clinical PDF text and the corresponding ground-truth Phenopacket object.\n",
     "\n",
@@ -585,13 +433,6 @@
    "source": [
     "# Load Clinical PDFs and Ground-Truth Phenopackets (with full skip‐tracking & deduplication)\n",
     "# Watch for any \"bad\" PDFs like \"scripts/data/tmp/phenopacket_store/pmid_pdfs/PMID_32325141.pdf\", which made `load_clinical_pdf` raise a ``ConversionError causing the whole cell to fail\n",
-    "\n",
-    "from pypdfium2._helpers.misc import PdfiumError\n",
-    "\n",
-    "import warnings\n",
-    "from google.protobuf.json_format import ParseDict, ParseError\n",
-    "from phenopackets import Phenopacket as ProtoPhenopacket\n",
-    "import hashlib\n",
     "\n",
     "def compute_pdf_hash(pdf_path: str) -> str:\n",
     "    \"\"\"Compute MD5 hash of a PDF file.\"\"\"\n",
@@ -720,7 +561,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 4.5. Define LLM Prompts\n",
+    "## Step 4.5. Define LLM Prompts\n",
     "\n",
     "Create one prompt for just HPO terms and another one for the full phenopacket extraction\n"
    ],
@@ -838,7 +679,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 5. Sanity-check one inference\n",
+    "## Step 5. Sanity-check one inference\n",
     "\n",
     "Run one LLM call on the first case to verify prompting and parsing work correctly.\n"
    ],
@@ -853,9 +694,6 @@
    },
    "cell_type": "code",
    "source": [
-    "import json\n",
-    "from json.decoder import JSONDecodeError\n",
-    "\n",
     "# pick out the first patient/example\n",
     "patient_id      = list_patient_ids[0]\n",
     "clinical_text   = list_input_texts[0]\n",
@@ -932,7 +770,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 6. Batch Inference and Save Validated Phenopackets\n",
+    "## Step 6. Batch Inference and Save Validated Phenopackets\n",
     "\n",
     "Loop over all cases, run LLM inference, validate each JSON as a Phenopacket, and save to disk under validated_jsons_directory.\n"
    ],
@@ -984,7 +822,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 7. Evaluate Predicted Phenopackets Against Ground Truth\n",
+    "## Step 7. Evaluate Predicted Phenopackets Against Ground Truth\n",
     "\n",
     "Compare each predicted phenopacket to its ground truth using PhenotypeEvaluator, then generate a Report object with overall metrics.\n"
    ],
