--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -36,13 +36,11 @@
     "from typing import List, Dict, Any\n",
     "from ollama import chat\n",
     "from docling.document_converter import DocumentConverter, ConversionError\n",
-    "\n",
     "from pypdfium2._helpers.misc import PdfiumError\n",
     "import warnings\n",
     "from google.protobuf.json_format import ParseDict, ParseError\n",
     "from phenopackets import Phenopacket as ProtoPhenopacket\n",
     "import hashlib\n",
-    "\n",
     "import json\n",
     "from json.decoder import JSONDecodeError\n",
     "\n",
@@ -498,9 +496,10 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Step 3. Prepare PDF-to-Text Converter and Helper Function\n",
+    "## Step 3. Subset PMIDs, Prepare PDF-to-Text Converter, and Helper Functions\n",
     "\n",
-    "Instantiate DocumentConverter and define a helper function to load or convert the clinical PDFs for LLM input.\n"
+    "- Randomly pick N unique PMIDs from the CSV (from Step 1) to keep runs fast and reproducible.\n",
+    "- Instantiate DocumentConverter and define a helper function to load or convert the clinical PDFs for LLM input.\n"
    ],
    "id": "9a9faff43b491b26"
   },
@@ -513,7 +512,17 @@
    },
    "cell_type": "code",
    "source": [
-    "# Setup conversion for input material to LLM-compatible txt\n",
+    "# Reload the deduplicated CSV from Step 1\n",
+    "full_df = pd.read_csv(dataset_csv_path).drop_duplicates(subset=\"pmid\").reset_index(drop=True)\n",
+    "\n",
+    "# Choose how many cases to sample\n",
+    "N = 10\n",
+    "subset_df = full_df.sample(n=N, random_state=42).reset_index(drop=True)\n",
+    "\n",
+    "print(f\"Sampling {N} PMIDs:\", subset_df[\"pmid\"].tolist())\n",
+    "\n",
+    "\n",
+    "# Setup conversion for input material to LLM-compatible txt now\n",
     "\n",
     "# Initialize converter once\n",
     "pdf_to_text_converter = DocumentConverter()\n",
@@ -608,10 +617,8 @@
    "cell_type": "code",
    "id": "235eaff7-4f21-4a21-81bf-e97236ca26d1",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2025-07-21T09:39:49.390763Z",
      "start_time": "2025-07-21T09:38:09.773020Z"
     }
    },
@@ -704,8 +711,117 @@
     "\n",
     "print(\"hello4\")  # print hello 4 as a sanity check"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "Parameter `strict_text` has been deprecated and will be ignored.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 1 new cases, skipped 0 so far\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "Parameter `strict_text` has been deprecated and will be ignored.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 2 new cases, skipped 0 so far\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "Parameter `strict_text` has been deprecated and will be ignored.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 3 new cases, skipped 0 so far\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "Parameter `strict_text` has been deprecated and will be ignored.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 4 new cases, skipped 0 so far\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parameter `strict_text` has been deprecated and will be ignored.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 5 new cases, skipped 0 so far\n",
+      "Loaded 5 clinical texts and 5 ground-truth packets for 5 unique patients\n",
+      "hello4\n"
+     ]
+    }
+   ],
+   "execution_count": 98
   },
   {
    "metadata": {},
@@ -718,7 +834,12 @@
    "id": "5b74dfdf270a5845"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-21T10:00:46.096186Z",
+     "start_time": "2025-07-21T10:00:46.089110Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Save cache to disk\n",
@@ -809,8 +930,16 @@
     ")"
    ],
    "id": "589eb0d8cac4d8ec",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved text cache with 5 entries to /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/text_cache.pkl\n"
+     ]
+    }
+   ],
+   "execution_count": 99
   },
   {
    "metadata": {},
@@ -823,7 +952,12 @@
    "id": "3165f6539c3dfc20"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-21T10:01:00.249060Z",
+     "start_time": "2025-07-21T10:00:50.677637Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# pick out the first patient/example\n",
@@ -870,8 +1004,33 @@
     "print(\"hello5\")  # print hello 5 as a sanity check"
    ],
    "id": "1f547b47f98fc0b3",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw LLM output (truncated to the first ~300 chars or so):\n",
+      "Here is the summary of the article:\n",
+      "\n",
+      "**Title:** Adult-Onset Mitochondrial Neurohepatopathy Caused by MPV17 Mutations: A Case Report and Literature Review\n",
+      "\n",
+      "**Summary:** Mitochondrial DNA depletion syndromes can present in adulthood with multisystem involvement, including amenorrhea and megaloblastic  ...\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Could not locate a JSON array in HPO output for patient Case Report:\nHere is the summary of the article:\n\n**Title:** Adult-Onset Mitochondrial Neurohepatopathy Caused by MPV17 Mutations: A Case Report and Literature Review\n\n**Summary:** Mitochondrial DNA depletion syndromes can present in adulthood with multisystem involvement, including amenorrhea and megaloblastic anemia. The authors report a case of a female patient who presented with adult-onset hepatocerebral mitochondrial DNA depletion syndrome caused by a mutation in the MPV17 gene.\n\n**Main Points:**\n\n1. Mitochondrial DNA depletion syndromes can present in adulthood with multisystem involvement.\n2. MPV17 mutations are associated with infantile hepatic mitochondrial DNA depletion syndrome, but adult-onset forms have been reported.\n3. The authors report a case of a female patient who presented with amenorrhea and megaloblastic anemia due to an MPV17 mutation.\n4. The patient's liver and nervous system involvement were consistent with hepatocerebral mitochondrial DNA depletion syndrome.\n5. The diagnosis was confirmed by genetic testing for the MPV17 mutation.\n\n**Clinical Significance:** This case highlights the importance of considering mitochondrial DNA depletion syndromes in adults presenting with unexplained amenorrhea, megaloblastic anemia, or liver disease. Further research is needed to understand the molecular mechanisms underlying adult-onset MPV17 mutations and their clinical implications.\n\n**Conflict of Interest:** The authors disclose no conflicts of interest.\n\n**Ethics:** The study was conducted in accordance with the Helsinki Declaration of 1975 and institutional review board guidelines.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mRuntimeError\u001B[39m                              Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[100]\u001B[39m\u001B[32m, line 32\u001B[39m\n\u001B[32m     30\u001B[39m end_idx         = raw_hpo_output.rfind(\u001B[33m\"\u001B[39m\u001B[33m]\u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m     31\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m start_idx < \u001B[32m0\u001B[39m \u001B[38;5;129;01mor\u001B[39;00m end_idx < \u001B[32m0\u001B[39m:\n\u001B[32m---> \u001B[39m\u001B[32m32\u001B[39m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mRuntimeError\u001B[39;00m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mCould not locate a JSON array in HPO output for patient \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mpatient_id\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m:\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;132;01m{\u001B[39;00mraw_hpo_output\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n\u001B[32m     33\u001B[39m hpo_json_array  = raw_hpo_output[start_idx : end_idx+\u001B[32m1\u001B[39m]\n\u001B[32m     35\u001B[39m \u001B[38;5;66;03m# Parse and validate\u001B[39;00m\n",
+      "\u001B[31mRuntimeError\u001B[39m: Could not locate a JSON array in HPO output for patient Case Report:\nHere is the summary of the article:\n\n**Title:** Adult-Onset Mitochondrial Neurohepatopathy Caused by MPV17 Mutations: A Case Report and Literature Review\n\n**Summary:** Mitochondrial DNA depletion syndromes can present in adulthood with multisystem involvement, including amenorrhea and megaloblastic anemia. The authors report a case of a female patient who presented with adult-onset hepatocerebral mitochondrial DNA depletion syndrome caused by a mutation in the MPV17 gene.\n\n**Main Points:**\n\n1. Mitochondrial DNA depletion syndromes can present in adulthood with multisystem involvement.\n2. MPV17 mutations are associated with infantile hepatic mitochondrial DNA depletion syndrome, but adult-onset forms have been reported.\n3. The authors report a case of a female patient who presented with amenorrhea and megaloblastic anemia due to an MPV17 mutation.\n4. The patient's liver and nervous system involvement were consistent with hepatocerebral mitochondrial DNA depletion syndrome.\n5. The diagnosis was confirmed by genetic testing for the MPV17 mutation.\n\n**Clinical Significance:** This case highlights the importance of considering mitochondrial DNA depletion syndromes in adults presenting with unexplained amenorrhea, megaloblastic anemia, or liver disease. Further research is needed to understand the molecular mechanisms underlying adult-onset MPV17 mutations and their clinical implications.\n\n**Conflict of Interest:** The authors disclose no conflicts of interest.\n\n**Ethics:** The study was conducted in accordance with the Helsinki Declaration of 1975 and institutional review board guidelines."
+     ]
+    }
+   ],
+   "execution_count": 100
   },
   {
    "metadata": {},
