--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -224,36 +224,11 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# Prepare phenopacket JSON cache, skip logic, and cap how many PDFs to process\n",
-    "\n",
-    "# Set number of cases to process in this run\n",
-    "MAX_LOAD = 10\n",
-    "\n",
-    "# Persist cache of already-parsed phenopacket cases\n",
-    "phenopacket_cache_path = os.path.join(experimental_data_root, \"phenopacket_cache.json\")\n",
-    "\n",
-    "# Load existing cache is present\n",
-    "try:\n",
-    "    with open(phenopacket_cache_path, \"r\") as f:\n",
-    "        phenopacket_cache: Dict[str, Any] = json.load(f)\n",
-    "        print(f\"Loaded phenopacket cache with {len(phenopacket_cache)} entries\")\n",
-    "except FileNotFoundError:\n",
-    "    phenopacket_cache = {}\n",
-    "    print(\"Initialized empty phenopacket cache\")\n",
-    "\n",
-    "# Lookup parsed PDFs - by MD5 hash?\n",
-    "# TODO: figure out how to use SHA-256 or SHA-512\n",
-    "existing_hashes = {info[\"hash\"] for info in phenopacket_cache.values()}\n",
-    "\n",
-    "# Prepare to record skipped cases due to failures, as well as the reasons why\n",
-    "skipped_pdfs: List[Dict[str, str]] = []\n",
-    "loaded_count = 0\n",
-    "\n",
     "# Finding all ground-truth phenopacket JSON files\n",
     "search_pattern = os.path.join(ground_truth_notebooks_directory, \"*\", \"phenopackets\", \"*.json\")\n",
     "truth_json_filepaths = glob.glob(search_pattern, recursive=True)\n",
     "if not truth_json_filepaths:\n",
-    "    raise FileNotFoundError(\"No ground-truth phenopacket JSON files found with pattern: %s\" % search_pattern)\n",
+    "    raise FileNotFoundError(f\"No ground-truth JSONs found at {search_pattern}\")\n",
     "\n",
     "print(\"Discovered %d ground-truth JSON files\" %len(truth_json_filepaths))\n",
     "\n",
@@ -276,7 +251,7 @@
    "source": [
     "## Step 3. Prepare PDF-to-Text Converter\n",
     "\n",
-    "- Randomly pick N unique PMIDs from the CSV (from Step 1) to keep runs fast and reproducible.\n",
+    "- Randomly pick N unique PMIDs from the CSV (from Step 1) to keep runs fast and reproducible.\n",
     "- Instantiate DocumentConverter and define a helper function to load or convert the clinical PDFs for LLM input.\n",
     "- Setup Persistent PDF-to-Text Cache"
    ],
@@ -286,7 +261,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# Reload the deduplicated CSV from Step 1\n",
+    "# Reload the deduplicated CSV from Step 1\n",
     "full_df = pd.read_csv(dataset_csv_path).drop_duplicates(subset=\"pmid\").reset_index(drop=True)\n",
     "\n",
     "# Choose how many cases to sample\n",
@@ -346,7 +321,7 @@
     "\n",
     "# Convert all PDFs in our sampled subset\n",
     "for pdf_path in subset_df[\"input\"]\n",
-    "    _ = load_clinical_pdf(pdf_path)\n",
+    "    pdf_text = load_clinical_pdf(pdf_path)\n",
     "# Persist updated cache to disk\n",
     "with open(text_cache_path, \"wb\") as f:\n",
     "    pickle.dump(text_cache, f)\n",
@@ -387,22 +362,7 @@
    "id": "235eaff7-4f21-4a21-81bf-e97236ca26d1",
    "metadata": {},
    "source": [
-    "# Load Clinical PDFs and Ground-Truth Phenopackets (with full skip‐tracking & deduplication)\n",
-    "# Watch for any \"bad\" PDFs like \"scripts/data/tmp/phenopacket_store/pmid_pdfs/PMID_32325141.pdf\", which made `load_clinical_pdf` raise a ``ConversionError causing the whole cell to fail\n",
-    "\n",
-    "def compute_pdf_hash(pdf_path: str) -> str:\n",
-    "    \"\"\"Compute MD5 hash of a PDF file.\"\"\"\n",
-    "    with open(pdf_path, \"rb\") as f:\n",
-    "        return hashlib.md5(f.read()).hexdigest()\n",
-    "\n",
-    "def save_caches():\n",
-    "    \"\"\"Persist both phenopacket_cache (JSON) and text_cache (pickle).\"\"\"\n",
-    "    with open(phenopacket_cache_path, \"w\", encoding=\"utf-8\") as f:\n",
-    "        json.dump(phenopacket_cache, f, indent=2)\n",
-    "    with open(text_cache_path, \"wb\") as f:\n",
-    "        pickle.dump(text_cache, f)\n",
-    "\n",
-    "# Now iterate over rows, should lookup only once\n",
+    "# Iterate over rows, should lookup only once\n",
     "list_input_texts    = []\n",
     "list_truth_packets  = []\n",
     "list_patient_ids    = []\n",
@@ -413,33 +373,14 @@
     "    pdf_path   = case.input\n",
     "    truth_path = case.truth\n",
     "\n",
-    "    # 1) Compute MD5 of the PDF to detect reruns\n",
-    "    try:\n",
-    "        with open(pdf_path, \"rb\") as f:\n",
-    "            pdf_bytes = f.read()\n",
-    "        pdf_hash = hashlib.md5(pdf_bytes).hexdigest()\n",
-    "    except Exception as e:\n",
-    "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": f\"I/O error computing hash: {e}\"})\n",
-    "        continue\n",
-    "\n",
-    "    # 2) Skip if already processed\n",
-    "    if pdf_hash in existing_hashes:\n",
-    "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": \"already in cache\"})\n",
-    "        continue\n",
-    "\n",
-    "    # 3) Enforce MAX_LOAD\n",
-    "    if loaded_count >= MAX_LOAD:\n",
-    "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": \"max load reached\"})\n",
-    "        continue\n",
-    "\n",
-    "    # 4) Convert PDF to text\n",
+    "    Convert PDF to text\n",
     "    try:\n",
     "        clinical_text = load_clinical_pdf(pdf_path)\n",
     "    except (ConversionError, PdfiumError) as e:\n",
     "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": f\"conversion error: {e}\"})\n",
     "        continue\n",
     "\n",
-    "    # 5) Load raw JSON and validate with ignore_unknown_fields\n",
+    "    Load raw JSON and validate with ignore_unknown_fields\n",
     "    try:\n",
     "        raw_true_packet = json.load(open(truth_path, \"r\", encoding=\"utf-8\"))\n",
     "        proto = ProtoPhenopacket()\n",
@@ -448,17 +389,12 @@
     "        skipped_pdfs.append({\"pmid\": pmid_value, \"truth\": truth_path, \"reason\": f\"schema parse error: {e}\"})\n",
     "        continue\n",
     "\n",
-    "    # 6) Wrap in util Phenopacket to ensure phenotypicFeatures exists\n",
+    "    Wrap in util Phenopacket to ensure phenotypicFeatures exists\n",
     "    try:\n",
     "        truth_packet = Phenopacket(raw_true_packet)\n",
     "    except InvalidPhenopacketError as e:\n",
     "        skipped_pdfs.append({\"pmid\": pmid_value, \"truth\": truth_path, \"reason\": f\"phenopacket invalid: {e}\"})\n",
     "        continue\n",
-    "\n",
-    "    # 7) Record in cache & lists\n",
-    "    phenopacket_cache[str(pmid_value)] = {\"hash\": pdf_hash, \"json\": raw_true_packet}\n",
-    "    existing_hashes.add(pdf_hash)\n",
-    "    save_caches()\n",
     "\n",
     "    list_input_texts.append(clinical_text)\n",
     "    list_truth_packets.append(truth_packet)\n",
@@ -486,17 +422,14 @@
     "\n",
     "Create one prompt for just HPO terms and another one for the full phenopacket extraction\n"
    ],
-   "id": "5b74dfdf270a5845"
+   "id": "a5f9ab5a0c5a064d"
   },
   {
    "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
-    "# Save cache to disk\n",
-    "with open(text_cache_path,\"wb\") as f:\n",
-    "    pickle.dump(text_cache, f)\n",
-    "print(f\"Saved text cache with {len(text_cache)} entries to {text_cache_path}\")\n",
-    "\n",
     "# 1) Prompt for just HPO labels\n",
     "hpo_prompt = (\n",
     "    \"You are a clinical NLP engine specialized in biomedical ontologies. Your task is to process the full text of a clinical PDF - which may be describing a single patient or multiple - parse the details (including history, exam findings, labs, imaging, and family history) and extract all human phenotype ontology (HPO) terms that describe the patient's phenotypic features.\"\n",
@@ -579,9 +512,7 @@
     "    \"If you cannot comply, output exactly: {'error': 'cannot extract JSON'}\"\n",
     ")"
    ],
-   "id": "589eb0d8cac4d8ec",
-   "outputs": [],
-   "execution_count": null
+   "id": "6f5d51a89657db88"
   },
   {
    "metadata": {},
@@ -591,7 +522,7 @@
     "\n",
     "Run one LLM call on the first case to verify prompting and parsing work correctly.\n"
    ],
-   "id": "3165f6539c3dfc20"
+   "id": "8f03843785823cdc"
   },
   {
    "metadata": {},
