Cache Integrity & Versioning

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -26,18 +26,44 @@
    "metadata": {},
    "source": [
     "# Basic Setup\n",
-    "import sys, os, glob, json, subprocess, pickle\n",
+    "import sys, os, glob, json, subprocess, pickle, datetime, hashlib, warnings\n",
+    "from pathlib import Path\n",
     "import pandas as pd\n",
     "from typing import List, Dict, Any\n",
     "from ollama import chat\n",
     "from docling.document_converter import DocumentConverter, ConversionError\n",
     "from pypdfium2._helpers.misc import PdfiumError\n",
-    "import warnings\n",
     "from google.protobuf.json_format import ParseDict, ParseError\n",
     "from phenopackets import Phenopacket as ProtoPhenopacket\n",
-    "import hashlib\n",
-    "import json\n",
     "from json.decoder import JSONDecodeError\n",
+    "\n",
+    "# Cache Integrity & Versioning\n",
+    "CACHE_DIR = Path(\"experimental-data/text_cache\")\n",
+    "INDEX_FILE = CACHE_DIR / \"cache_index.json\"\n",
+    "CACHE_DIR.mkdir(exist_ok=True)\n",
+    "\n",
+    "def _hash_pdf(pdf_path: Path) -> str:\n",
+    "    h = hashlib.sha256()\n",
+    "    h.update(pdf_path.read_bytes())\n",
+    "    return h.hexdigest()\n",
+    "\n",
+    "def load_or_update_cache(pmids: list[str], pmid_to_pdf: dict[str, Path]):\n",
+    "    if INDEX_FILE.exists():\n",
+    "        index = json.loads(INDEX_FILE.read_text())\n",
+    "    else:\n",
+    "        index = {}\n",
+    "    for pmid in pmids:\n",
+    "        pdf = pmid_to_pdf[pmid]\n",
+    "        digest = _hash_pdf(pdf)\n",
+    "        if pmid not in index or index[pmid][\"hash\"] != digest:\n",
+    "            text = extract_text_from_pdf(pdf)\n",
+    "            with open(CACHE_DIR / f\"{pmid}.pkl\", \"wb\") as fh:\n",
+    "                pickle.dump(text, fh)\n",
+    "            index[pmid] = {\n",
+    "                \"hash\": digest,\n",
+    "                \"cached_at\": datetime.datetime.utcnow().isoformat()\n",
+    "            }\n",
+    "    INDEX_FILE.write_text(json.dumps(index, indent=2))\n",
     "\n",
     "# Need this at least once for some reason:\n",
     "# import .autonotebook\n",
