--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -529,8 +529,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-21T17:32:14.211363Z",
-     "start_time": "2025-07-21T17:32:14.202007Z"
+     "end_time": "2025-07-21T17:33:05.752112Z",
+     "start_time": "2025-07-21T17:33:05.538505Z"
     }
    },
    "cell_type": "code",
@@ -594,7 +594,7 @@
     "    return content\n",
     "\n",
     "# Convert all PDFs in our sampled subset\n",
-    "for pdf_path in subset_df[\"input\"]\n",
+    "for pdf_path in subset_df[\"input\"]:\n",
     "    pdf_text = load_clinical_pdf(pdf_path)\n",
     "# Persist updated cache to disk\n",
     "with open(text_cache_path, \"wb\") as f:\n",
@@ -614,15 +614,21 @@
    "id": "231c1c375a6ec410",
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "expected ':' (1026813023.py, line 60)",
+     "ename": "ValueError",
+     "evalue": "Cannot take a larger sample than population when 'replace=False'",
      "output_type": "error",
      "traceback": [
-      "  \u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[105]\u001B[39m\u001B[32m, line 60\u001B[39m\n\u001B[31m    \u001B[39m\u001B[31mfor pdf_path in subset_df[\"input\"]\u001B[39m\n                                      ^\n\u001B[31mSyntaxError\u001B[39m\u001B[31m:\u001B[39m expected ':'\n"
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mValueError\u001B[39m                                Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[106]\u001B[39m\u001B[32m, line 6\u001B[39m\n\u001B[32m      4\u001B[39m \u001B[38;5;66;03m# Choose how many cases to sample\u001B[39;00m\n\u001B[32m      5\u001B[39m N = \u001B[32m10\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m6\u001B[39m subset_df = \u001B[43mfull_df\u001B[49m\u001B[43m.\u001B[49m\u001B[43msample\u001B[49m\u001B[43m(\u001B[49m\u001B[43mn\u001B[49m\u001B[43m=\u001B[49m\u001B[43mN\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mrandom_state\u001B[49m\u001B[43m=\u001B[49m\u001B[32;43m42\u001B[39;49m\u001B[43m)\u001B[49m.reset_index(drop=\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[32m      8\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mSampling \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mN\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m PMIDs:\u001B[39m\u001B[33m\"\u001B[39m, subset_df[\u001B[33m\"\u001B[39m\u001B[33mpmid\u001B[39m\u001B[33m\"\u001B[39m].tolist())\n\u001B[32m     11\u001B[39m \u001B[38;5;66;03m# Setup conversion for input material to LLM-compatible txt now\u001B[39;00m\n\u001B[32m     12\u001B[39m \n\u001B[32m     13\u001B[39m \u001B[38;5;66;03m# Initialize converter once\u001B[39;00m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/miniconda3/envs/p5/lib/python3.13/site-packages/pandas/core/generic.py:6118\u001B[39m, in \u001B[36mNDFrame.sample\u001B[39m\u001B[34m(self, n, frac, replace, weights, random_state, axis, ignore_index)\u001B[39m\n\u001B[32m   6115\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m weights \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[32m   6116\u001B[39m     weights = sample.preprocess_weights(\u001B[38;5;28mself\u001B[39m, weights, axis)\n\u001B[32m-> \u001B[39m\u001B[32m6118\u001B[39m sampled_indices = \u001B[43msample\u001B[49m\u001B[43m.\u001B[49m\u001B[43msample\u001B[49m\u001B[43m(\u001B[49m\u001B[43mobj_len\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msize\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mreplace\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mweights\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mrs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m   6119\u001B[39m result = \u001B[38;5;28mself\u001B[39m.take(sampled_indices, axis=axis)\n\u001B[32m   6121\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m ignore_index:\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/miniconda3/envs/p5/lib/python3.13/site-packages/pandas/core/sample.py:152\u001B[39m, in \u001B[36msample\u001B[39m\u001B[34m(obj_len, size, replace, weights, random_state)\u001B[39m\n\u001B[32m    149\u001B[39m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m    150\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\u001B[33m\"\u001B[39m\u001B[33mInvalid weights: weights sum to zero\u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m--> \u001B[39m\u001B[32m152\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mrandom_state\u001B[49m\u001B[43m.\u001B[49m\u001B[43mchoice\u001B[49m\u001B[43m(\u001B[49m\u001B[43mobj_len\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msize\u001B[49m\u001B[43m=\u001B[49m\u001B[43msize\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mreplace\u001B[49m\u001B[43m=\u001B[49m\u001B[43mreplace\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mp\u001B[49m\u001B[43m=\u001B[49m\u001B[43mweights\u001B[49m\u001B[43m)\u001B[49m.astype(\n\u001B[32m    153\u001B[39m     np.intp, copy=\u001B[38;5;28;01mFalse\u001B[39;00m\n\u001B[32m    154\u001B[39m )\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mnumpy/random/mtrand.pyx:1020\u001B[39m, in \u001B[36mnumpy.random.mtrand.RandomState.choice\u001B[39m\u001B[34m()\u001B[39m\n",
+      "\u001B[31mValueError\u001B[39m: Cannot take a larger sample than population when 'replace=False'"
      ]
     }
    ],
-   "execution_count": 105
+   "execution_count": 106
   },
   {
    "metadata": {},
